--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-12 14:38+0000\n"
+"POT-Creation-Date: 2021-04-14 18:49+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Moy Moussan <moymoussan@gmail.com>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -1878,15 +1878,6 @@ msgstr "Token API"
 msgid "The API token for your integration as provided by Zenvia"
 msgstr ""
 
-msgid "United Kingdom"
-msgstr "Reino Unido"
-
-msgid "Scension Island"
-msgstr "Isla Scension"
-
-msgid "Kosovo"
-msgstr "Kosovo"
-
 msgid "POST Required"
 msgstr "AVISO requerido"
 
@@ -1986,9 +1977,6 @@ msgstr "Encontramos un error para retirar su transmisor, por favor, inténtelo n
 
 msgid "Save Changes"
 msgstr "Guardar cambios"
-
-msgid "or"
-msgstr "o"
 
 #, fuzzy
 #| msgid "A connection to a Nexmo account is required"
@@ -4100,6 +4088,17 @@ msgstr "Crear Activador de Referencias"
 
 msgid "Create Schedule"
 msgstr "Crear Cronograma"
+
+msgid "United Kingdom"
+msgstr "Reino Unido"
+
+#, fuzzy
+#| msgid "Scension Island"
+msgid "Ascension Island"
+msgstr "Isla Scension"
+
+msgid "Kosovo"
+msgstr "Kosovo"
 
 msgid "Processing"
 msgstr "Procesando"
@@ -7822,6 +7821,9 @@ msgstr "Ingrese una consulta"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "Se encontró $ {count} por $ {query}"
+
+#~ msgid "or"
+#~ msgstr "o"
 
 #~ msgid "The main language used by this organization"
 #~ msgstr "El idioma principal usado por esta organización"
