--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-22 21:15+0000\n"
+"POT-Creation-Date: 2021-05-04 15:22+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Ilhasoft <contato@ilhasoft.com.br>, 2021\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -1787,12 +1787,6 @@ msgstr "Não foi possível registrar as chamadas de retorno: %s"
 #, python-format
 msgid "Unable to configure channel: %s"
 msgstr "Não foi possível configurar canal: %s"
-
-msgid "Contacts refresh begun, it may take a few minutes to complete."
-msgstr "Atualização de contatos iniciada, pode levar alguns minutos para ser concluída."
-
-msgid "Sync Logs"
-msgstr "Sincronizar Logs"
 
 msgid "The base URL for your WhatsApp enterprise installation"
 msgstr "O URL base para sua instalação corporativa do WhatsApp"
@@ -4184,6 +4178,12 @@ msgstr ", "
 msgid "An error occurred while making your changes. Please try again."
 msgstr "Um erro ocorreu enquanto realizava suas alterações. Por favor, tente novamente."
 
+msgid "Contacts refresh begun, it may take a few minutes to complete."
+msgstr "Atualização de contatos iniciada, pode levar alguns minutos para ser concluída."
+
+msgid "Sync Logs"
+msgstr "Sincronizar Logs"
+
 msgid "HTTP Logs"
 msgstr "Logs HTTP"
 
@@ -5312,21 +5312,6 @@ msgstr "Seu canal de WhatsApp está agora conectado, você poderá ser capaz de 
 
 msgid "In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh the contacts on the WhatsApp application. This may take a few minutes."
 msgstr "No caso de uma nova instalação do WhatsApp ou substituição de um canal existente do WhatsApp, pode ser necessário atualizar os contatos no aplicativo WhatsApp. Isso pode levar alguns minutos."
-
-msgid "WhatsApp Templates Events"
-msgstr "Templates de eventos do WhatsApp"
-
-msgid "No syncs yet. Check back later."
-msgstr "Nenhum sincronismo até o momento. Verifique mais tarde."
-
-msgid "Templates"
-msgstr "Templates"
-
-msgid "Templates are synced from your WhatsApp account every 15 minutes."
-msgstr "Templates são sincronizados da sua conta do WhatsApp a cada 15 minutos."
-
-msgid "No synced templates at this time."
-msgstr "Sem templates sincronizados neste momento."
 
 msgid "Connect a Classifier"
 msgstr "Conecte um Classificador"
@@ -7811,6 +7796,25 @@ msgstr "Adicione uma dúvida"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "Encontrado ${count} para ${query}"
+
+#, fuzzy
+#| msgid "WhatsApp Templates Events"
+msgid "Templates Events"
+msgstr "Templates de eventos do WhatsApp"
+
+msgid "No syncs yet. Check back later."
+msgstr "Nenhum sincronismo até o momento. Verifique mais tarde."
+
+msgid "Templates"
+msgstr "Templates"
+
+#, fuzzy
+#| msgid "Templates are synced from your WhatsApp account every 15 minutes."
+msgid "Whatsapp Templates are synced from your account every 15 minutes."
+msgstr "Templates são sincronizados da sua conta do WhatsApp a cada 15 minutos."
+
+msgid "No synced templates at this time."
+msgstr "Sem templates sincronizados neste momento."
 
 #~ msgid "The area code you want to search for a new number in"
 #~ msgstr "Código de área em que você deseja procurar por um novo número"
