Correct WhatsApp word

--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-04 15:25+0000\n"
+"POT-Creation-Date: 2021-05-05 07:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -7339,7 +7339,7 @@ msgstr ""
 msgid "Templates"
 msgstr ""
 
-msgid "Whatsapp Templates are synced from your account every 15 minutes."
+msgid "WhatsApp Templates are synced from your account every 15 minutes."
 msgstr ""
 
 msgid "No synced templates at this time."
