--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-04 15:25+0000\n"
+"POT-Creation-Date: 2021-05-05 07:32+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -7814,7 +7814,7 @@ msgstr "Modèles"
 
 #, fuzzy
 #| msgid "Templates are synced from your WhatsApp account every 15 minutes."
-msgid "Whatsapp Templates are synced from your account every 15 minutes."
+msgid "WhatsApp Templates are synced from your account every 15 minutes."
 msgstr "Les modèles sont synchronisés à partir de votre compte WhatsApp toutes les 15 minutes."
 
 msgid "No synced templates at this time."
